--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
+    "react-vis": "^1.11.7",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
