--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
     "react": "^16.12.0",
@@ -24,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "launch": "(npm run build && open http://localhost:5000 && flask run) & mongod --port=27018 --dbpath=/Users/$USER/data/db"
   },
   "eslintConfig": {
     "extends": "react-app"
